Swarun: Changed website

--- a/dliot.html
+++ b/dliot.html
@@ -22,8 +22,8 @@
 						<div class="row">
 							<div class="12u">
 
-								<!-- Logo
-									<h1><a href="#" id="logo"></a></h1> -->
+								<!-- Logo -->
+									<h1><a href="#" id="logo">WiTech Lab</a></h1> 
 
 								<!-- Nav -->
 									<nav id="nav">
@@ -37,6 +37,91 @@
 							</div>
 						</div>
 					</header>
+					<div id="banner">
+						<div class="container">
+							<div class="row">
+								<div class="6u 12u(mobile)">
+
+									<!-- Banner Copy -->
+										<p>Laboratory for Emerging Wireless Technologies</p>
+										<!--<a href="#" class="button-big">Learn More</a> -->
+
+								</div>
+								<div class="6u 12u(mobile)">
+
+									<!-- Banner Image -->
+										<a href="#"><img src="images/banner.png"  style="width:400px;" id="witech" alt="" /></a>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			<!-- Features
+				<div id="features-wrapper">
+					<div id="features">
+						<div class="container">
+							<div class="row">
+								<div class="3u 12u(mobile)">
+
+									<!-- Feature #1
+										<section>
+											<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
+											<h2>Welcome to Halcyonic</h2>
+											<p>
+												This is <strong>Halcyonic</strong>, a free site template
+												by <a href="http://twitter.com/ajlkn">AJ</a> for
+												<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
+												built on HTML5 + CSS3, and includes 5 unique page layouts.
+											</p>
+										</section>
+
+								</div>
+								<div class="3u 12u(mobile)">
+
+									<!-- Feature #2
+										<section>
+											<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
+											<h2>Responsive You Say?</h2>
+											<p>
+												Yes! Halcyonic is built on the <a href="http://getskel.com">Skel</a>
+												framework, so it has full responsive support for desktop, tablet,
+												and mobile device displays.
+											</p>
+										</section>
+
+								</div>
+								<div class="3u 12u(mobile)">
+
+									<!-- Feature #3
+										<section>
+											<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
+											<h2>License Info</h2>
+											<p>
+												Halcyonic is licensed under the <a href="http://html5up.net/license">CCA 3.0</a> license,
+												so use it for personal or commercial use as much as you like (just keep
+												the footer credit intact).
+											</p>
+										</section>
+
+								</div>
+								<div class="3u 12u(mobile)">
+
+									<!-- Feature #4
+										<section>
+											<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
+											<h2>Volutpat etiam aliquam</h2>
+											<p>
+												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
+												eu varius nibh. Suspendisse vitae magna eget odio amet mollis.
+											</p>
+										</section>
+
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 
 			<!-- Content -->
@@ -44,12 +129,10 @@
 					<div id="content">
 						<div class="container">
 							<div class="row">
-								<div class="12u">
 
-									<!-- Main Content -->
-										<section>
-											<p>
 
+
+<div class="12u"><section>
 
 <strong><h4>Project DLIoT: A Deep Learning Approach to IoT Authentication </h4></strong><br />
 <table>
@@ -69,8 +152,7 @@ Since low-power IoT client devices are low-power, we need to offload the compute
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
 <li> <strong>A Deep Learning Approach to IoT Authentication </strong>, Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC  2018 [<a href="papers/dliot-icc2018.pdf">PAPER</a>]<br />
 </li>
-</ul></div>											</p>
-										</section>
+</ul></div>										</section>
 
 								</div>
 							</div>
