--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 						<div class="row">
 							<div class="12u">
 
-								<!-- Logo
-									<h1><a href="#" id="logo"></a></h1> -->
+								<!-- Logo -->
+									<h1><a href="#" id="logo">WiTech Lab</a></h1> 
 
 								<!-- Nav -->
 									<nav id="nav">
@@ -43,14 +43,14 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>WiTech Lab: Laboratory for Emerging Wireless Technologies</p>
+										<p>Laboratory for Emerging Wireless Technologies</p>
 										<!--<a href="#" class="button-big">Learn More</a> -->
 
 								</div>
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Image -->
-										<a href="#"><img src="images/banner.png"  style="width:400px; float:right" alt="" /></a>
+										<a href="#"><img src="images/banner.png"  style="width:400px;" id="witech" alt="" /></a>
 
 								</div>
 							</div>
@@ -129,6 +129,9 @@
 					<div id="content">
 						<div class="container">
 							<div class="row">
+
+
+
 								<div class="4u 12u(mobile)">
 
 									<!-- Box #1 -->
@@ -148,6 +151,9 @@
 
 									<!-- Box #2 -->
 										<section>
+
+
+
 											<header>
 												<h2>News</h2>
 												<!--<h3>A subheading about what we do</h3> -->
@@ -179,6 +185,8 @@
 												<!-- <h3>And a final subheading about our clients</h3> -->
 											</header>
 											Our lab is located on the 4th floor of the Collaborative Innovation Center on the CMU campus. Professor Swarun Kumar, the PI, has his contact information listed <a href = "https://www.andrew.cmu.edu/user/swarunk/index.html"> here</a>.
+
+
 										</section>
 
 								</div>
