Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -187,7 +187,7 @@
 
      <a href="https://atul-bansal.github.io/"> <figure> <img src="images/Atul.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Atul Bansal</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Atul Bansal</div></figcaption> </figure>
+																								    <figcaption>Atul Bansal</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Bob Iannucci</div></figcaption> </figure>
 
 																								 </a>
 																							 </center>
